For M1 support, Stop building {fmt} as header-only
We were seeing the following when doing a Release build on an M1 mac:

    dlopen([snip]/_qwerty_harness.abi3.so, 0x0002): symbol not found in flat namespace '__ZN3fmt2v87vformatENS0_17basic_string_viewIcEENS0_17basic_format_argsINS0_20basic_format_contextINS0_8appenderEcEEEE'

When you demangle that symbol, you get

    _fmt::v8::vformat(fmt::v8::basic_string_view<char>, fmt::v8::basic_format_args<fmt::v8::basic_format_context<fmt::v8::appender, char> >)

This issue was previously reported for fmt [1][2], and it was
suggested[2] to disable {fmt} being built as header-only.
This indeed seems to resolve the issue; the only downside is that
consumers of tweedledum must link with libfmt.a as well as
libtweedledum.a. This is acceptable for Qwerty.

[1]: https://github.com/fmtlib/fmt/issues/3505
[2]: https://github.com/gabime/spdlog/issues/2773

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,6 @@ endif()
 # =============================================================================
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 find_package(Eigen3 3.3 REQUIRED)
-find_package(fmt 8.1.1 REQUIRED)
 find_package(nlohmann_json 3.9.0 REQUIRED)
 find_package(phmap 1.0.0 REQUIRED)
 add_subdirectory(external)
@@ -44,7 +43,7 @@ if(TWEEDLEDUM_PYBINDS AND TWEEDLEDUM_MASTER_PROJECT)
     target_include_directories(_tweedledum PRIVATE ${PROJECT_SOURCE_DIR}/include)
     target_link_libraries(_tweedledum PRIVATE
         Eigen3::Eigen3
-        fmt::fmt-header-only
+        fmt::fmt
         mockturtle
         $<$<CXX_COMPILER_ID:GNU>:stdc++fs>)
     target_compile_options(_tweedledum PRIVATE
@@ -67,7 +66,7 @@ target_include_directories(tweedledum ${tweedledum_system} PUBLIC
     $<INSTALL_INTERFACE:include>)
 target_link_libraries(tweedledum PUBLIC
     Eigen3::Eigen3
-    fmt::fmt-header-only
+    fmt::fmt
     mockturtle
     nlohmann_json
     $<$<CXX_COMPILER_ID:GNU>:stdc++fs>)
